fix: Align game__content text horizontally

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
   align-items: center;
   justify-content: center;
 
+  text-align: center;
   font-size: 2.3rem;
   color: #363535;
   font-weight: 600;
